2009-12-18  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Add export the new symbol in WebCoreSystemInterface.

        * WebCore.base.exp:
        * platform/mac/WebCoreSystemInterface.h:
        * platform/mac/WebCoreSystemInterface.mm:

2009-12-18  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Forward declare NSMutableArray when not compiling for Objective-C.

        * platform/mac/WebCoreSystemInterface.h:

2009-12-18  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=32720
        Replace UString addition/append with use of JSC::StringBuilder.

        * ForwardingHeaders/runtime/StringBuilder.h: Added.
        * bindings/js/ScriptString.h:
        (WebCore::ScriptString::operator+=):
        * bridge/jni/jni_runtime.cpp:
        (appendClassName):
        (JavaMethod::signature):
        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::addProfileFinishedMessageToConsole):
        (WebCore::InspectorController::addStartProfilingMessageToConsole):
        (WebCore::InspectorController::getCurrentUserInitiatedProfileName):

2009-12-18  Kenneth Russell  <kbr@google.com>

        Reviewed by Darin Fisher.

        Index validation for drawElements examines too many indices
        https://bugs.webkit.org/show_bug.cgi?id=32692

        Test: fast/canvas/webgl/bug-32692.html

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::validateIndexArrayPrecise):

2009-12-18  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Update WebKitSystemInterface for <rdar://problem/7237059>.        

        * platform/mac/WebCoreSystemInterface.h:
        * platform/mac/WebCoreSystemInterface.mm:

2009-12-18  Adam Roben  <aroben@apple.com>

        GTK build fix

        * plugins/gtk/PluginViewGtk.cpp: Added #include.
